--- a/BackBudget/.classpath
+++ b/BackBudget/.classpath
@@ -2,33 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Test"/>
-	<classpathentry kind="lib" path="F:/jee/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/hibernate-core-4.2.1.Final.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/hibernate-entitymanager-4.2.1.Final.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/javassist-3.15.0-GA.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/javax.faces-2.2.5.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/jboss-logging-3.1.0.GA.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/mysql-connector-java-5.1.25.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/primefaces-5.1.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-aop-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-beans-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-context-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-core-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-expression-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-jdbc-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-orm-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-test-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-tx-4.0.2.RELEASE.jar"/>
-	<classpathentry kind="lib" path="F:/jee/lib/spring-web-4.0.2.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
@@ -36,5 +9,32 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/hibernate-core-4.2.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/hibernate-entitymanager-4.2.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/javax.faces-2.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/mysql-connector-java-5.1.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/primefaces-5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-aop-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-beans-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-context-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-core-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-expression-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-jdbc-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-orm-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-test-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-tx-4.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kendras/git/Budget/BackBudgetAll/WebContent/WEB-INF/lib/spring-web-4.0.2.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
